project2-network-ludtke.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Deploy Network and Security Groups for Project 2
# This should be all the basic sections needed in Project #2
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      Tags:
      - Key: Name
        Value: VPC-Project2

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: IGW-Project2

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: us-east-1a
        #Fn::Select:
        #- '0'
        #- Fn::GetAZs: ''
      Tags:
      - Key: Name
        Value: PubSub1-Project2

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: us-east-1b
        #Fn::Select:
        #- '1'
        #- Fn::GetAZs: ''
      Tags:
      - Key: Name
        Value: PubSub2-Project2

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: us-east-1a
        #Fn::Select:
        #- '0'
        #- Fn::GetAZs: ''
      Tags:
      - Key: Name
        Value: PriSub1-Project2

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.4.0/24
      AvailabilityZone: us-east-1b
        #Fn::Select:
        #- '1'
        #- Fn::GetAZs: ''
      Tags:
      - Key: Name
        Value: PriSub2-Project2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: PubRT-Project2

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: PriRT-Project2

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      InstanceId: !Ref NATInstance

  PrivateRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Allow all http traffic to load balancer
      GroupName: ALBSG-Project2
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: 
        Ref: VPC
      Tags:
        - Key: Name
          Value: ALBSG

  WebInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Security group for web instances on private subnets
      VpcId: 
        Ref: VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        SourceSecurityGroupId: !GetAtt BastionHostSecurityGroup.GroupId
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: WebInsSG

  NATInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: "ami-0f498e123a72a0a36"
      InstanceType: t2.micro
      KeyName: "project1"
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          SubnetId:
            Ref: PublicSubnet1
          GroupSet:
            - !Ref NATSecurityGroup
      SourceDestCheck: false
      Tags:
        - Key: Name
          Value: NATinst

  NATSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Security group for NAT instance on public subnet
      VpcId: 
        Ref: VPC
      Tags:
        - Key: Name
          Value: NATSG

  NATSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
        GroupId: 
          Ref: NATSecurityGroup
        IpProtocol: "-1"
        CidrIp: 0.0.0.0/0

  BastionHostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Security group for the bastion host on public subnet
      VpcId: 
        Ref: VPC
      Tags:
        - Key: Name
          Value: BastionSG

  BastionHostSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
        GroupId: 
          Ref: BastionHostSecurityGroup
        IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: '75.135.72.62/24'

Outputs:
  VPC:
    Description: VPC for Project2
    Value: !Ref VPC
  PrivateSubnet1:
    Description: PrivateSubnet1 for Project2
    Value: !Ref PrivateSubnet1
  PrivateSubnet2:
    Description: PrivateSubnet2 for Project2
    Value: !Ref PrivateSubnet2
  PublicSubnet1:
    Description: PublicSubnet1 for Project2
    Value: !Ref PublicSubnet1
  PublicSubnet2:
    Description: PublicSubnet2 for Project2
    Value: !Ref PublicSubnet2
  WebInstanceSecurityGroup:
    Description: Web Instance Security Group for Project2
    Value: !GetAtt 
    - WebInstanceSecurityGroup
    - GroupId
  ALBSecurityGroup:
    Description: Load Balancer Security Group for Project2
    Value: !GetAtt
    - ALBSecurityGroup
    - GroupId
  NATInstance:
    Description: NAT Instance ID
    Value: !Ref NATInstance
  NATSecurityGroup:
    Description: NAT Instance Security Group for Project2
    Value: !GetAtt 
    - NATSecurityGroup
    - GroupId
  BastionHostSecurityGroup:
    Description: Bastion Host Instance Security Group for Project2
    Value: !GetAtt   
    - BastionHostSecurityGroup
    - GroupId
  NetworkStackName:
    Description: Name of the network stack as determined by the parent
    Value: NetworkStack
